--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100%;
-            background-size: cover;
+            height: auto;
+            background-repeat: no-repeat;
             background: linear-gradient(to bottom, #DFFFD7, #90EE90);
         }
         
