--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 
         @media (orientation: landscape) {
             .header-image {
-                width: 50vw;
+                width: 33vw;
+            }
+
+            .container {
+                padding-right: 0;
+                padding-left: 0;
+                width: 33vw;
             }
         }
 
@@ -108,8 +114,7 @@
     </div>
     <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
     <div class="container mt-5" style="margin-bottom: 10vh; margin-top: 2vh;">   
-        <form id="multi-section-form" method="post"
-            action="https://script.google.com/macros/s/AKfycbx2tQ6Eh3o_0erSGqmIOJR8pR7g9aG2uPJwkCDSWSuVIbBFsVE3oc_vJkhQtw3KYd_s/exec">
+        <form id="multi-section-form" method="post">
             <div class="section active" id="section1">
                 <h2>THÔNG TIN SẢN XUẤT</h2>
                 <br>
