--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container mt-5" style="margin-bottom: 10vh; margin-top: 2vh;">   
         <form id="multi-section-form" method="post">
             <div class="section active" id="section1">
-                <h2>THÔNG TIN SẢN XUẤT</h2>
+                <h2>THÔNG TIN LIÊN HỆ</h2>
                 <br>
                 <div class="mb-3">
                     <label for="organization" class="form-label">Tên đơn vị:</label>
