--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-repeat: no-repeat;
             background: linear-gradient(to bottom, #DFFFD7, #90EE90);
         }
-        
+
         .section {
             display: none;
         }
@@ -51,14 +51,32 @@
         }
 
         @media (orientation: landscape) {
-            .header-image {
+
+            .header-image,
+            .container {
                 width: 33vw;
             }
 
-            .container {
-                padding-right: 0;
-                padding-left: 0;
-                width: 33vw;
+            @media (max-width: 1912px) {
+
+                .header-image,
+                .container {
+                    width: 33vw;
+                }
+            }
+
+            @media (max-width: 1528px) {
+
+                .header-image,
+                .container {
+                    width: 25vw;
+                }
+
+                .section h2 {
+                    text-align: center;
+                    font-size: 1.17em;
+                    margin: 1em 0;
+                }
             }
         }
 
@@ -113,7 +131,7 @@
         <div class="spinner"></div>
     </div>
     <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
-    <div class="container" style="margin-bottom: 10vh; margin-top: 2vh;">   
+    <div class="container" style="margin-bottom: 10vh; margin-top: 2vh;">
         <form id="multi-section-form" method="post">
             <div class="section active" id="section1">
                 <h2>THÔNG TIN LIÊN HỆ</h2>
