--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
                         <div class="form-check form-check-inline" style="flex: 1;">
                             <input class="form-check-input" type="radio" name="category" id="plant" value="cây trồng"
                                 required>
-                            <label class="form-check-label" for="plant">Cây trồng:</label>
+                            <label class="form-check-label" for="plant">Cây trồng</label>
                         </div>
                         <div class="form-check form-check-inline" style="flex: 1;">
                             <input class="form-check-input" type="radio" name="category" id="animal" value="vật nuôi"
                                 required>
-                            <label class="form-check-label" for="animal">Vật nuôi:</label>
+                            <label class="form-check-label" for="animal">Vật nuôi</label>
                         </div>
                         <div class="form-check form-check-inline" style="flex: 1;">
                             <input class="form-check-input" type="radio" name="category" id="product" value="sản phẩm"
                                 required>
-                            <label class="form-check-label" for="product">Sản phẩm:</label>
+                            <label class="form-check-label" for="product">Sản phẩm</label>
                         </div>
                     </div>
                 </div>
