--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="spinner"></div>
     </div>
     <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
-    <div class="container" style="margin-bottom: 10vh; margin-top: 2vh;">
+    <div class="container" style="padding-left: 0; padding-right: 0; margin-bottom: 10vh; margin-top: 2vh;">
         <form id="multi-section-form" method="post">
             <div class="section active" id="section1">
                 <h2>THÔNG TIN LIÊN HỆ</h2>
