--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 margin: 0;
                 padding: 0;
                 height: 120vh;
-                background-image: linear-gradient(to bottom, #daf0ff 0%, #6ac5fe 74%);
+                background: linear-gradient(to bottom, #90EE90, #DFFFD7);
                 background-repeat: no-repeat;
             }
     
