--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 margin: 0;
                 padding: 0;
                 height: 120vh;
-                background: linear-gradient(to bottom, #90EE90, #DFFFD7);
+                background: linear-gradient(to bottom, #DFFFD7, #90EE90);
                 background-repeat: no-repeat;
             }
     
