--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             body {
                 margin: 0;
                 padding: 0;
-                height: 120vh;
+                height: 120%;
                 background: linear-gradient(to bottom, #DFFFD7, #90EE90);
                 background-repeat: no-repeat;
             }
