update name col

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                     </div>
                 </div>
                 <div class="mb-3">
+                    <label for="name" class="form-label">Tên sản phẩm / hàng hóa:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="mb-3">
                     <label for="quantity" class="form-label">Sản lượng:</label>
                     <input type="number" class="form-control" id="quantity" name="quantity" required>
                 </div>
